--- a/Colottimizzato.html
+++ b/Colottimizzato.html
@@ -45,10 +45,31 @@
       cursor: crosshair;
     }
 
+    /* Contenitore principale colori con due colonne */
     #colors {
       display: flex;
-      flex-wrap: wrap;
-      gap: 0.5rem;
+      gap: 1rem;
+      /* Altezza per scorrimento se molti colori */
+      max-height: 300px;
+      overflow-y: auto;
+    }
+
+    /* Colonna sinistra: colori disponibili (vuota per ora) */
+    #available-colors {
+      flex: 1;
+      border: 1px solid #ccc;
+      padding: 0.5rem;
+      border-radius: 5px;
+      min-height: 100px;
+    }
+
+    /* Colonna destra: colori selezionati */
+    #selected-colors {
+      flex: 1;
+      border: 1px solid #ccc;
+      padding: 0.5rem;
+      border-radius: 5px;
+      min-height: 100px;
     }
 
     .color-box {
@@ -59,6 +80,7 @@
       padding: 0.5rem 1rem;
       border-radius: 5px;
       font-size: 1rem;
+      margin-bottom: 0.5rem;
     }
 
     .swatch {
@@ -77,11 +99,9 @@
         margin-right: 1rem;
       }
 
+      /* Qui eliminiamo #colors da colonna e lo lasciamo solo in basso come due colonne */
       #colors {
-        flex: 1;
-        flex-direction: column;
-        max-height: 90vh;
-        overflow-y: auto;
+        max-height: 300px;
       }
     }
   </style>
@@ -93,14 +113,25 @@
       <input type="file" id="image-input" accept="image/*" />
       <canvas id="image-canvas"></canvas>
     </div>
-    <div id="colors"></div>
+    <div id="colors">
+      <div id="available-colors">
+        <strong>Colori disponibili</strong>
+        <!-- Per ora vuoto, si può implementare -->
+      </div>
+      <div id="selected-colors">
+        <strong>Colori selezionati</strong>
+        <!-- Qui andranno i colori selezionati -->
+      </div>
+    </div>
   </main>
 
   <script>
     const imageInput = document.getElementById('image-input');
     const canvas = document.getElementById('image-canvas');
     const ctx = canvas.getContext('2d');
-    const colorsContainer = document.getElementById('colors');
+    // Cambiamo i contenitori per le due colonne
+    // const colorsContainer = document.getElementById('colors');
+    const selectedColorsContainer = document.getElementById('selected-colors');
 
     imageInput.addEventListener('change', (e) => {
       const file = e.target.files[0];
@@ -132,11 +163,17 @@
       return "#" + [r, g, b].map(x => x.toString(16).padStart(2, '0')).join('');
     }
 
+    // Tenere traccia dei colori già aggiunti per non duplicare
+    const addedColors = new Set();
+
     function addColorBox(hex) {
+      if (addedColors.has(hex)) return; // evita duplicati
+      addedColors.add(hex);
+
       const div = document.createElement('div');
       div.className = 'color-box';
       div.innerHTML = `<div class="swatch" style="background: ${hex}"></div><span>${hex}</span>`;
-      colorsContainer.appendChild(div);
+      selectedColorsContainer.appendChild(div);
     }
   </script>
 </body>
