--- a/Colottimizzato.html
+++ b/Colottimizzato.html
@@ -23,53 +23,49 @@
 
     main {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       padding: 1rem;
-    }
-
-    input[type="file"] {
-      margin-bottom: 1rem;
+      gap: 1rem;
+      height: 90vh; /* per scroll nella colonna colori */
     }
 
     #image-container {
-      position: relative;
-      max-width: 100%;
-      overflow-x: auto;
+      flex: 3;
+      display: flex;
+      flex-direction: column;
+      overflow: auto;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 0.5rem;
+      max-height: 100%;
+    }
+
+    #image-input {
       margin-bottom: 1rem;
     }
 
-    #loaded-image {
+    #image-canvas {
       width: 100%;
       height: auto;
-      display: block;
       cursor: crosshair;
+      border: 1px solid #ddd;
+      border-radius: 3px;
     }
 
-    /* Contenitore principale colori con due colonne */
-    #colors {
-      display: flex;
-      gap: 1rem;
-      /* Altezza per scorrimento se molti colori */
-      max-height: 300px;
-      overflow-y: auto;
-    }
-
-    /* Colonna sinistra: colori disponibili (vuota per ora) */
-    #available-colors {
-      flex: 1;
-      border: 1px solid #ccc;
-      padding: 0.5rem;
-      border-radius: 5px;
-      min-height: 100px;
-    }
-
-    /* Colonna destra: colori selezionati */
     #selected-colors {
       flex: 1;
+      overflow-y: auto;
       border: 1px solid #ccc;
-      padding: 0.5rem;
       border-radius: 5px;
-      min-height: 100px;
+      padding: 0.5rem;
+      max-height: 100%;
+    }
+
+    #selected-colors strong {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-size: 1.2rem;
+      text-align: center;
     }
 
     .color-box {
@@ -87,22 +83,7 @@
       width: 20px;
       height: 20px;
       border: 1px solid #ccc;
-    }
-
-    @media (min-width: 768px) {
-      main {
-        flex-direction: row;
-      }
-
-      #image-container {
-        flex: 3;
-        margin-right: 1rem;
-      }
-
-      /* Qui eliminiamo #colors da colonna e lo lasciamo solo in basso come due colonne */
-      #colors {
-        max-height: 300px;
-      }
+      flex-shrink: 0;
     }
   </style>
 </head>
@@ -113,15 +94,9 @@
       <input type="file" id="image-input" accept="image/*" />
       <canvas id="image-canvas"></canvas>
     </div>
-    <div id="colors">
-      <div id="available-colors">
-        <strong>Colori disponibili</strong>
-        <!-- Per ora vuoto, si può implementare -->
-      </div>
-      <div id="selected-colors">
-        <strong>Colori selezionati</strong>
-        <!-- Qui andranno i colori selezionati -->
-      </div>
+    <div id="selected-colors">
+      <strong>Colori selezionati</strong>
+      <!-- Qui saranno mostrati i colori cliccati -->
     </div>
   </main>
 
@@ -129,8 +104,6 @@
     const imageInput = document.getElementById('image-input');
     const canvas = document.getElementById('image-canvas');
     const ctx = canvas.getContext('2d');
-    // Cambiamo i contenitori per le due colonne
-    // const colorsContainer = document.getElementById('colors');
     const selectedColorsContainer = document.getElementById('selected-colors');
 
     imageInput.addEventListener('change', (e) => {
@@ -163,11 +136,10 @@
       return "#" + [r, g, b].map(x => x.toString(16).padStart(2, '0')).join('');
     }
 
-    // Tenere traccia dei colori già aggiunti per non duplicare
     const addedColors = new Set();
 
     function addColorBox(hex) {
-      if (addedColors.has(hex)) return; // evita duplicati
+      if (addedColors.has(hex)) return;
       addedColors.add(hex);
 
       const div = document.createElement('div');
