--- a/Colottimizzato.html
+++ b/Colottimizzato.html
@@ -26,7 +26,7 @@
       flex-direction: row;
       padding: 1rem;
       gap: 1rem;
-      height: 90vh; /* per scroll nella colonna colori */
+      height: 90vh;
     }
 
     #image-container {
@@ -54,18 +54,28 @@
 
     #selected-colors {
       flex: 1;
-      overflow-y: auto;
       border: 1px solid #ccc;
       border-radius: 5px;
       padding: 0.5rem;
       max-height: 100%;
+      display: flex;
+      flex-direction: column;
     }
 
     #selected-colors strong {
-      display: block;
       margin-bottom: 0.5rem;
       font-size: 1.2rem;
       text-align: center;
+      flex-shrink: 0;
+    }
+
+    #color-list {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      gap: 0.5rem;
+      overflow-x: auto;
+      padding-bottom: 0.5rem;
     }
 
     .color-box {
@@ -76,7 +86,8 @@
       padding: 0.5rem 1rem;
       border-radius: 5px;
       font-size: 1rem;
-      margin-bottom: 0.5rem;
+      white-space: nowrap;
+      flex-shrink: 0;
     }
 
     .swatch {
@@ -96,7 +107,9 @@
     </div>
     <div id="selected-colors">
       <strong>Colori selezionati</strong>
-      <!-- Qui saranno mostrati i colori cliccati -->
+      <div id="color-list">
+        <!-- Colori selezionati orizzontali -->
+      </div>
     </div>
   </main>
 
@@ -104,7 +117,7 @@
     const imageInput = document.getElementById('image-input');
     const canvas = document.getElementById('image-canvas');
     const ctx = canvas.getContext('2d');
-    const selectedColorsContainer = document.getElementById('selected-colors');
+    const colorList = document.getElementById('color-list');
 
     imageInput.addEventListener('change', (e) => {
       const file = e.target.files[0];
@@ -145,7 +158,7 @@
       const div = document.createElement('div');
       div.className = 'color-box';
       div.innerHTML = `<div class="swatch" style="background: ${hex}"></div><span>${hex}</span>`;
-      selectedColorsContainer.appendChild(div);
+      colorList.appendChild(div);
     }
   </script>
 </body>
