--- a/Colori.html
+++ b/Colori.html
@@ -30,14 +30,13 @@
     }
 
     #image-container {
-      flex: 3;
+      width: 75%;
       display: flex;
       flex-direction: column;
       overflow: auto;
       border: 1px solid #ccc;
       border-radius: 5px;
       padding: 0.5rem;
-      max-height: 100%;
     }
 
     #image-input {
@@ -53,18 +52,17 @@
     }
 
     #selected-colors {
-      flex: 1;
+      width: 25%;
       border: 1px solid #ccc;
       border-radius: 5px;
       padding: 0.5rem;
-      max-height: 100%;
       display: flex;
       flex-direction: column;
     }
 
     #selected-colors strong {
       margin-bottom: 0.5rem;
-      font-size: 1.2rem;
+      font-size: 1rem;
       text-align: center;
       flex-shrink: 0;
     }
@@ -73,7 +71,7 @@
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
-      gap: 0.5rem;
+      gap: 0.3rem;
       overflow-x: auto;
       padding-bottom: 0.5rem;
     }
@@ -81,18 +79,18 @@
     .color-box {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.3rem;
       background: #f0f0f0;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
-      font-size: 1rem;
+      padding: 0.3rem 0.5rem;
+      border-radius: 4px;
+      font-size: 0.8rem;
       white-space: nowrap;
       flex-shrink: 0;
     }
 
     .swatch {
-      width: 20px;
-      height: 20px;
+      width: 16px;
+      height: 16px;
       border: 1px solid #ccc;
       flex-shrink: 0;
     }
@@ -108,7 +106,7 @@
     <div id="selected-colors">
       <strong>Colori selezionati</strong>
       <div id="color-list">
-        <!-- Colori selezionati orizzontali -->
+        <!-- Colori selezionati -->
       </div>
     </div>
   </main>
