--- a/Colottimizzato.html
+++ b/Colottimizzato.html
@@ -26,7 +26,7 @@
       flex-direction: row;
       padding: 1rem;
       gap: 1rem;
-      height: calc(100vh - 80px); /* Altezza dinamica */
+      height: calc(100vh - 80px);
     }
 
     #image-container {
@@ -58,6 +58,7 @@
       padding: 0.5rem;
       display: flex;
       flex-direction: column;
+      background-color: #f9f9f9; /* Correzione per sfondo coerente */
     }
 
     #selected-colors strong {
@@ -71,6 +72,7 @@
       flex-direction: column;
       overflow-y: auto;
       gap: 0.3rem;
+      flex-grow: 1;
     }
 
     .color-box {
