--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     }
 
     header {
-      background-color: #333;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-    }
+  color: #333; /* grigio scuro */
+  padding: 1rem;
+  text-align: center;
+  font-size: 1.5rem;
+}
 
     main {
       display: flex;
