--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     #image-canvas {
       width: 100%;
       max-height: 100%;
-      cursor: crosshair;
+      cursor: pointer;
       border: 1px solid #ddd;
       border-radius: 3px;
       object-fit: contain;
