--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       margin-bottom: 1rem;
     }
 
-    #image-canvas {
-      width: 100%;
-      max-height: 100%;
-      cursor: pointer;
-      border: 1px solid #ddd;
-      border-radius: 3px;
-      object-fit: contain;
-    }
+#image-canvas {
+  width: 100%;
+  max-height: 100%;
+  cursor: url('cursor-hand.png') 0 0, pointer;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  object-fit: contain;
+}
 
     #selected-colors {
       width: 25%;
